--- a/spring-cloud-gcp-samples/spring-cloud-gcp-param-config-sample/pom.xml
+++ b/spring-cloud-gcp-samples/spring-cloud-gcp-param-config-sample/pom.xml
@@ -20,7 +20,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- Configuration Client Starter for Google Parameter Manager -->
+        <!-- Configuration Client Starter for Google Parameter Manager Configuration -->
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>spring-cloud-gcp-starter-paramconfig</artifactId>
