--- a/spring-cloud-gcp-samples/spring-cloud-gcp-param-config-sample/src/main/resources/bootstrap.properties
+++ b/spring-cloud-gcp-samples/spring-cloud-gcp-param-config-sample/src/main/resources/bootstrap.properties
@@ -6,6 +6,6 @@ spring.application.name=myapp
 spring.profiles.active=prod
 
 # Provide project id, credentials to override default
-spring.cloud.gcp.paramconfig.project-id=migrationsource-392805
-#spring.cloud.gcp.paramconfig.location=global
+#spring.cloud.gcp.paramconfig.project-id=my-project
+#spring.cloud.gcp.paramconfig.location=us-central1
 #spring.cloud.gcp.config.credentials.location=my-credentials-file-location
